abdm-callback.proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: abdm-callback-proxy
    environment: default
  name: abdm-callback-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abdm-callback-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: abdm-callback-proxy
        environment: default
    spec:
      containers:
        - image: infoiplitin/iplit-abdm-callback-proxy
          name: iplit-abdm-callback-proxy
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: abdm-callback-proxy
spec:
  ports:
    - name: '9099'
      port: 9099
      targetPort: 80
  selector:
    app: abdm-callback-proxy
    environment: default
  type: NodePort
