ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abdm-callback-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dev.bahmnilite.in
      http:
        paths:
          - path: /callback
            pathType: Prefix
            backend:
              service:
                name: abdm-callback-proxy
                port:
                  number: 9099
